# it

./: .gitignore  CMakeLists.txt  README.MacOS.CodeSigning.md  README.md  TODO.md  builtin.txt  builtin_mandi.txt  builtin_sample_milnor.txt  builtin_sample_newton.txt  builtin_sample_quadratic.txt  colormappreview.cpp  colormappreview.h  compile_linux.sh  compile_macos.sh  compile_windows.bat  deploy.bat  deploy.sh  filesmodel.cpp  filesmodel.h  icon-old.icns  icon.icns  itview.cpp  itview.h  jupyter.cpp  jupyter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramsmodel.cpp  paramsmodel.h  resources.qrc  syntaxhighlightercpp.cpp  syntaxhighlightercpp.h  template.txt  tree.cpp  tree.h  winstall.iss
doc/: download.md  manual.md
it/: Algo.cpp  Algo.h  Args.cpp  Args.h  Colormap.cpp  Colormap.h  FUN.cpp  Function.cpp  Function.h  MTComplex.cpp  MTComplex.h  MTRandom.cpp  MTRandom.h  State.cpp  State.h  debug.cpp  debug.h
maps/: abustd2.map  bu.map  bustd.map  bw.map  eqdis.map  foo.map  ginvred.map  gradalpine.map  gradblue.map  gradcherry.map  gradcherry2.map  gradcoffee.map  graddeepsea.map  gradfuchsia.map  gradlake.map  gradrust.map  gradsiena.map  gradvalentine.map  mix.map  oof.map  shmoov1.map  shmoov2.map  shwoof.map  spectral.map  wb.map
